--- a/index.css
+++ b/index.css
@@ -49,44 +49,7 @@
     .video-container{position:relative; padding-bottom:56.25%; padding-top:1.875rem; height:0; overflow:hidden;}
     /* YouTube Embedded iframe */
     .video-container iframe, .video-container object, .video-container embed {position:absolute; top:0; left:0; width:100%; height:100%;}
-    /* Root - ContributionCalendar Color */
-    :root{
-        --color-calendar-graph-day-bg: #F1F8FB;
-        --color-calendar-graph-day-L1-bg: #C1E0EF;
-        --color-calendar-graph-day-L2-bg: #92C8E3;
-        --color-calendar-graph-day-L3-bg: #62B0D7;
-        --color-calendar-graph-day-L4-bg: #3399CC;}
-    /* ContributionCalendar Color */
-    rect.ContributionCalendar-day[data-level='0']{fill: var(--color-calendar-graph-day-bg);}
-    rect.ContributionCalendar-day[data-level='1']{fill: var(--color-calendar-graph-day-L1-bg);}
-    rect.ContributionCalendar-day[data-level='2']{fill: var(--color-calendar-graph-day-L2-bg);}
-    rect.ContributionCalendar-day[data-level='3']{fill: var(--color-calendar-graph-day-L3-bg);}
-    rect.ContributionCalendar-day[data-level='4']{fill: var(--color-calendar-graph-day-L4-bg);}
-    /* ContributionCalendar Frame */
-    .calendar{font-family:sans-serif; text-align:center; margin:0 auto; border:0.063rem solid #DDDDDD; border-radius:0.313rem; min-width:51.875rem; min-height:15.188rem;}
-    /* ContributionCalendar Graph */
-    .calendar-graph{padding:0.188rem 0 0; text-align:center;}
-    /* Day-Month */
-    text.ContributionCalendar-label{display:none;}
-    /* Color Block */
-    .contrib-legend{text-align:right; display:inline-block; padding:0 0.875rem 0.625rem 0;}
-    .contrib-legend .legend{display:inline-block; list-style:none; margin:0 0.313rem; position:relative; bottom:-0.063rem; padding:0;}
-    .contrib-legend .legend li{display:inline-block; width:0.625rem; height:0.625rem;}
-    /* Description Footer */
-    .contrib-footer{width:100%; box-sizing:border-box; height:1.625rem; padding:0 0.625rem 0.75rem; text-align:left; font-size:0.688rem;}
-    /* ContributionCalendar Column */
-    .contrib-column{padding:0.938rem 0; text-align:center; border-left:0.063rem solid #DDDDDD; border-top:0.063rem solid #DDDDDD; font-size:0.688rem;}
-    .table-column{display:table-cell; width:1%; padding-right:0.625rem; padding-left:0.625rem; vertical-align:top;}
-    /* ContributionCalendar Active-Year*/
-    .contrib-column-first{border-left:0;}
-    /*ContributionCalendar Mid */
-    .contrib-number{display:block; font-size:1.5rem; line-height:1.3em; color:#333333; font-weight:300;}
-    /* Description Column */
-    .left.text-muted{float:left; margin-left:0.563rem; color:#767676;}
-    /* Description */
-    .float-left{display:none;}
-        /* Color Description */
-        .text-gray{display:none;}}
+}
 /*1280px*/
     @media print, screen and (min-width:1280px){
         header{padding-right:11.25rem;}}
